@@ -936,6 +936,8 @@ Extension Modules
 Tests
 -----
 
+- Issue #17249: convert a test in test_capi to use unittest and reap threads.
+
 - Issue #17041: Fix testing when Python is configured with the
   --without-doc-strings.
 
